[gd_scene load_steps=11 format=3 uid="uid://dx6wvrlhjdisk"]

[ext_resource type="Script" path="res://scenes/ui/optical_puzzle/optical_puzzle_ui.gd" id="1_i26lm"]
[ext_resource type="Texture2D" uid="uid://svfhecx463xd" path="res://graphics/objects/Optical/Optical_box.png" id="2_c00kh"]
[ext_resource type="Texture2D" uid="uid://be1bq76lfb6k0" path="res://graphics/ui/x_button.png" id="3_61idh"]
[ext_resource type="Texture2D" uid="uid://bqdyka11h8noo" path="res://graphics/objects/Optical/mirror.png" id="5_2g2pc"]
[ext_resource type="PackedScene" uid="uid://drcixiu880oht" path="res://scenes/objects/laser.tscn" id="6_oj6t1"]
[ext_resource type="Texture2D" uid="uid://dhk5lftbwdptw" path="res://graphics/objects/Optical/left_broken_wire.png" id="7_8qxyy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtcmo"]
size = Vector2(40, 182)

[sub_resource type="CanvasTexture" id="CanvasTexture_a00mq"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ip018"]

[sub_resource type="LabelSettings" id="LabelSettings_sumua"]
font_size = 100
font_color = Color(0.109804, 0.537255, 0.192157, 1)

[node name="Optical_puzzle_ui" type="CanvasLayer"]
script = ExtResource("1_i26lm")

[node name="PanelWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Background" type="TextureRect" parent="PanelWindow"]
texture_filter = 1
layout_mode = 1
offset_right = 1944.0
offset_bottom = 1078.0
texture = ExtResource("2_c00kh")

[node name="MGForPuzzle" type="MarginContainer" parent="PanelWindow"]
layout_mode = 1
offset_top = -10.0
offset_right = 974.0
offset_bottom = 531.0
scale = Vector2(2, 2)

[node name="Laser" parent="PanelWindow/MGForPuzzle" instance=ExtResource("6_oj6t1")]
position = Vector2(210, 137.5)

[node name="Fibre_collider" type="Node2D" parent="PanelWindow/MGForPuzzle"]
position = Vector2(2.5, 5)
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="PanelWindow/MGForPuzzle/Fibre_collider" groups=["no_collision_group"]]
position = Vector2(-38, -35.5)
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="left_broken_wire" type="Sprite2D" parent="PanelWindow/MGForPuzzle/Fibre_collider/StaticBody2D"]
position = Vector2(224, 190)
scale = Vector2(7, 7)
texture = ExtResource("7_8qxyy")
region_enabled = true
region_rect = Rect2(48.4011, -0.203077, 32.5781, 21.2016)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelWindow/MGForPuzzle/Fibre_collider/StaticBody2D"]
polygon = PackedVector2Array(330.5, 115, 141.5, 113, 105.5, 139, 105.5, 251, 189, 250, 318.5, 258, 318.5, 248.5, 293, 229, 254.5, 230, 243, 198, 238, 181, 239, 160, 246, 127, 274, 124.5, 306, 130, 325, 129)

[node name="StaticBody2D2" type="StaticBody2D" parent="PanelWindow/MGForPuzzle/Fibre_collider"]
position = Vector2(-325.5, -19)
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="left_broken_wire2" type="Sprite2D" parent="PanelWindow/MGForPuzzle/Fibre_collider/StaticBody2D2"]
position = Vector2(1123, 168)
rotation = 3.14159
scale = Vector2(7, 7)
texture = ExtResource("7_8qxyy")
region_enabled = true
region_rect = Rect2(51.6132, -0.203077, 29.366, 21.2016)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="PanelWindow/MGForPuzzle/Fibre_collider/StaticBody2D2"]
position = Vector2(159, -19)
polygon = PackedVector2Array(880, 117.5, 1010, 120, 1068, 127, 1075, 260, 861.5, 264, 864.5, 251, 883, 251, 1044, 239, 1046, 155, 871.5, 123)

[node name="AreaWin" type="Area2D" parent="PanelWindow/MGForPuzzle/Fibre_collider" groups=["area_win_group"]]
unique_name_in_owner = true
position = Vector2(753.5, 144)
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelWindow/MGForPuzzle/Fibre_collider/AreaWin"]
polygon = PackedVector2Array(-25.5, -51.5, -11, -39, 31.5, -29, 32.5, 45.5, 1.5, 54.5, -23, 65.5, 44, 60, 44, -39.5)

[node name="Mirrors" type="Node2D" parent="PanelWindow/MGForPuzzle"]
position = Vector2(667.5, 381)
scale = Vector2(0.53, 0.53)

[node name="Mir" type="StaticBody2D" parent="PanelWindow/MGForPuzzle/Mirrors" groups=["Mirrors"]]
position = Vector2(-325.472, -271.698)
rotation = 1.5708
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_2g2pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir"]
shape = SubResource("RectangleShape2D_vtcmo")

[node name="Mir2" type="StaticBody2D" parent="PanelWindow/MGForPuzzle/Mirrors" groups=["Mirrors"]]
position = Vector2(-214.151, -408.491)
rotation = 3.14159
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir2"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_2g2pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir2"]
shape = SubResource("RectangleShape2D_vtcmo")

[node name="Mir3" type="StaticBody2D" parent="PanelWindow/MGForPuzzle/Mirrors" groups=["Mirrors"]]
position = Vector2(-71.6981, -499.057)
rotation = -0.785398
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir3"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_2g2pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir3"]
shape = SubResource("RectangleShape2D_vtcmo")

[node name="Mir4" type="StaticBody2D" parent="PanelWindow/MGForPuzzle/Mirrors" groups=["Mirrors"]]
position = Vector2(-530.189, -278.302)
rotation = 2.35619
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir4"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_2g2pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir4"]
shape = SubResource("RectangleShape2D_vtcmo")

[node name="Mir5" type="StaticBody2D" parent="PanelWindow/MGForPuzzle/Mirrors" groups=["Mirrors"]]
position = Vector2(-123.585, -307.547)
rotation = 0.785398
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir5"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_2g2pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir5"]
shape = SubResource("RectangleShape2D_vtcmo")

[node name="Mir6" type="StaticBody2D" parent="PanelWindow/MGForPuzzle/Mirrors" groups=["Mirrors"]]
position = Vector2(-417.925, -605.66)
rotation = 1.5708
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir6"]
shape = SubResource("RectangleShape2D_vtcmo")

[node name="Sprite2D2" type="Sprite2D" parent="PanelWindow/MGForPuzzle/Mirrors/Mir6"]
position = Vector2(0.000488281, 0.000244141)
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_2g2pc")

[node name="XButton" type="TextureButton" parent="PanelWindow/MGForPuzzle"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("3_61idh")

[node name="Win_message" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MG1_greenBack" type="MarginContainer" parent="Win_message"]
modulate = Color(0.108406, 0.536531, 0.193795, 1)
layout_mode = 0
offset_left = 541.0
offset_top = 319.0
offset_right = 1432.0
offset_bottom = 473.0
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Win_message/MG1_greenBack"]
layout_mode = 2
texture = SubResource("CanvasTexture_a00mq")

[node name="MG2_Titre" type="MarginContainer" parent="Win_message"]
layout_mode = 2
offset_left = 550.0
offset_top = 328.0
offset_right = 1422.0
offset_bottom = 465.0
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Win_message/MG2_Titre"]
modulate = Color(0.780392, 0.780392, 0.780392, 1)
layout_mode = 2
texture = SubResource("CanvasTexture_ip018")

[node name="Label" type="Label" parent="Win_message/MG2_Titre"]
layout_mode = 2
size_flags_horizontal = 4
text = "Connexion Ã©tablie"
label_settings = SubResource("LabelSettings_sumua")

[connection signal="optical_win" from="PanelWindow/MGForPuzzle/Laser" to="." method="_on_laser_optical_win"]
[connection signal="pressed" from="PanelWindow/MGForPuzzle/XButton" to="." method="_on_texture_button_pressed"]
